Problem_Statement_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: ghcr.io/nyrahul/wisecow:latest
        ports:
        - containerPort: 4499
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: "/"
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: "/"
            port: 4499
          initialDelaySeconds: 15
          periodSeconds: 20
