Problem_Statement_1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - wisecow.local
    secretName: wisecow-tls-secret
  rules:
  - host: wisecow.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
